tests/error/enum_errors/empty_enum_init.py
from guppylang import guppy

@guppy.enum
class MyEnum:
    pass

@guppy
def fun() -> None:
    x = MyEnum()

fun.compile()