tests/error/enum_errors/empty_enum_init.err
Error: Unexpected empty enum initialization (at $FILE:9:8)
  | 
7 | @guppy
8 | def fun() -> None:
9 |     x = MyEnum()
  |         ^^^^^^ Unexpected empty enum initialization

Guppy compilation failed due to 1 previous error
